docs/_includes/critical.scss
html {
  // ensure scroll bar always appears so that
  // it appearing/disappearing doesn't adjust
  // page width (and therefore content position)
  // between pages.
  overflow-y: scroll;
}

html, body {
  padding: 0;
  margin: 0;
  width: 100%;
  border-top: 2px solid #172b4d;
  color: #172b4d;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: #0096e2;
  text-decoration: none;
}

.wrapper {
  width: 1000px;
  max-width: 100%;
  margin: 0 auto;
  padding: 0 2rem;
  box-sizing: border-box;

  .innerWrapper {
    margin: 2rem 0;
    display: -webkit-box;
    flex-direction: row;
  }
}

.header {
  border-bottom: 2px solid grey;
  padding: 1rem 0;

  .title {
    margin: 0;
  }
}

.sidebar {
  width: calc(200px - 2rem);
  max-width: 30%;
  padding-right: 2rem;
  will-change: min-height;

  .sidebar-inner {
    transform: translate(0, 0);
    transform: translate3d(0, 0, 0);
    will-change: position, transform;
  }

  .sidebar-header {
    text-transform: uppercase;
    font-weight: 600;
    color: #888888;
    margin-bottom: 0.5rem;
  }

  .sidebar-list {
    margin: 0 0 2rem;
    list-style: none;
    padding: 0;

    &:last-child {
      margin: 0;
    }

    .sidebar-item {
      &.active {
        font-weight: bold;
        border-right: 2px solid #0096e2;
      }
    }
  }
}

.content {
  -webkit-box-flex: 1;

  h1, h2, h3, h4, h5 {
    position: relative;

    &:first-child {
      margin-top: 0;
    }

    &:before {
      content: '#';
      position: absolute;
      left: -1em;
      color: #0096e2;
    }
  }
}

